// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense 1`] = `
<div>
  <h2>
    working
  </h2>
  <p>
    Viewing 
    1
     expenses totalling 
    $1.95
  </p>
</div>
`;

exports[`should render ExpenseSummary without expenses 1`] = `
<div>
  <h2>
    working
  </h2>
  <p>
    Viewing 
    0
     expenses totalling 
    $0.00
  </p>
</div>
`;
